tests/snapshots/yaml_suite_snapshots__yaml_suite_FTA2_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Single block sequence with anchor and explicit document start
  from: "@perlpunk"
  tags: anchor header sequence
  yaml: "--- &sequence\n- a\n"
  tree: "+STR\n +DOC ---\n  +SEQ &sequence\n   =VAL :a\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"a\"\n]\n"
  dump: "--- &sequence\n- a\n"
