tests/snapshots/yaml_suite_snapshots__yaml_suite_FTA2_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "--- &sequence\n- a\n"
  from: "@perlpunk"
  json: "[\n  \"a\"\n]\n"
  name: Single block sequence with anchor and explicit document start
  tags: anchor header sequence
  tree: "+STR\n +DOC ---\n  +SEQ &sequence\n   =VAL :a\n  -SEQ\n -DOC\n-STR\n"
  yaml: "--- &sequence\n- a\n"
