tests/snapshots/yaml_suite_snapshots__yaml_suite_FUP4_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Flow Sequence in Flow Sequence
  from: NimYAML tests
  tags: sequence flow
  yaml: "[a, [b, c]]\n"
  tree: "+STR\n +DOC\n  +SEQ []\n   =VAL :a\n   +SEQ []\n    =VAL :b\n    =VAL :c\n   -SEQ\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"a\",\n  [\n    \"b\",\n    \"c\"\n  ]\n]\n"
  dump: "- a\n- - b\n  - c\n"
