tests/snapshots/yaml_suite_snapshots__yaml_suite_FUP4_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- a\n- - b\n  - c\n"
  from: NimYAML tests
  json: "[\n  \"a\",\n  [\n    \"b\",\n    \"c\"\n  ]\n]\n"
  name: Flow Sequence in Flow Sequence
  tags: sequence flow
  tree: "+STR\n +DOC\n  +SEQ []\n   =VAL :a\n   +SEQ []\n    =VAL :b\n    =VAL :c\n   -SEQ\n  -SEQ\n -DOC\n-STR\n"
  yaml: "[a, [b, c]]\n"
