tests/snapshots/yaml_suite_snapshots__yaml_suite_G4RS_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 2.17. Quoted Scalars
  from: "http://www.yaml.org/spec/1.2/spec.html#id2761245"
  tags: spec scalar
  yaml: "unicode: \"Sosa did fine.\\u263A\"\ncontrol: \"\\b1998\\t1999\\t2000\\n\"\nhex esc: \"\\x0d\\x0a is \\r\\…"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :unicode\n   =VAL \"Sosa did fine.☺\n   =VAL :control\n   =VAL \"\\b1…"
  json: "{\n  \"unicode\": \"Sosa did fine.☺\",\n  \"control\": \"\\b1998\\t1999\\t2000\\n\",\n  \"hex esc\": \"\\r\\n…"
  dump: "unicode: \"Sosa did fine.\\u263A\"\ncontrol: \"\\b1998\\t1999\\t2000\\n\"\nhex esc: \"\\r\\n is \\r\\n\"\ns…"
