tests/snapshots/yaml_suite_snapshots__yaml_suite_G5U8_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Plain dashes in flow sequence
  from: "@ingydotnet"
  tags: flow sequence
  fail: true
  yaml: "---\n- [-, -]\n"
  tree: "+STR\n +DOC ---\n  +SEQ\n   +SEQ []\n"
